# autoDMP

./: .clang-format  .gitignore  .lgtm.yml  CMakeLists.txt  CMakePresets.json  Makefile  README.md  autoDMP.ini  config.toml  ctrlDataQueue.txt  dropGen.txt  dropGenPiezo.txt  eventQueue.txt  imgui.ini  log.txt  procDataQueue.txt  stepCh0.txt  test.txt  testCh0.txt  vcpkg.json
.devcontainer/: Dockerfile.dev  Dockerfile.ubuntu-cpp  build_deps.bash  build_dev.bash  run.bash  setup.bash
apps/: CMakeLists.txt  main.cpp  test.cpp
apps/src/: main.cpp
apps/test/: test.cpp
cam/: CMakeLists.txt
cam/include/cam/: cam.hpp
cam/src/cam/: cam.cpp
cmake/: config.cmake  features.cmake
config/: setup.toml
config/ctrl/state0/: Ad.txt  Ad_.txt  Bd.txt  Cd.txt  K1.txt  K2.txt  Qw.txt
config/ctrl/state1/: Ad.txt  Ad_.txt  Bd.txt  Cd.txt  Cd_.txt  K1.txt  K2.txt
config/ctrl/state2/: Ad.txt  Ad_.txt  Bd.txt  Cd.txt  Cd_.txt  K1.txt  K2.txt  Qw.txt  Rv.txt
config/ctrl/sysid/: prbs.csv
config/improc/: config.toml  dispCharConfig.toml  tjunctionConfig.toml  usbcamConfig.toml  webcamConfig.toml
configured_files/: config.hpp.in
ctrl/: CMakeLists.txt
ctrl/include/ctrl/: supervisor.hpp
ctrl/include/ctrl/state/: state.hpp  state0.hpp  state1.hpp  state2.hpp  sysidstate.hpp
ctrl/scripts/: G0.mat  G1.mat  G2.mat  Gg.mat  T_junction.slx  T_junction_mdl.slx  T_junction_mpc.slx  aqueous_channel.slx  channel.slx  gainSchSig_.m  get1stOrderMdl.m  get2ndOrderMdl.m  getIntegratorMdl.m  getRegressors_.m  getSignals.m  handleEvent_.m  incrementfcn.py  mpcDesign.m  oil_channel.slx  plantConstants.m  prbs.py  requirements.txt  rls_.m  simJunction_.m  simSysID.m  sim_meas.py  sim_pid.py  stateEst_.m  stateEstimator.m  sysID.m  sysid.py  theta2ss_.m  toPhi_.m  trajGen_.m  wtMod_.m
ctrl/scripts/SupervisoryController_ert_rtw/: SupervisoryController.h  SupervisoryController.mk  ert_main.cpp
ctrl/scripts/simSysID/: G0.mat  G1.mat  G2.mat
ctrl/scripts/simSysID/train/: ctrlDataQueue.txt
ctrl/scripts/simSysID/val/: G2.mat  ctrlDataQueue.txt
ctrl/src/ctrl/: supervisor.cpp
ctrl/src/ctrl/state/: state.cpp  state0.cpp  state1.cpp  state2.cpp  sysidstate.cpp
docs/: Doxyfile
fuzz_test/: fuzz_tester.cpp
gui/: CMakeLists.txt
gui/include/gui/: gui.hpp  guiframe.hpp  windows.hpp
gui/include/gui/components/: button.hpp  checkboxarray.hpp  dropdown.hpp  image.hpp  implot_helpers.hpp  slider.hpp  sliderfloatarray.hpp  sliderint.hpp  vertsliderintarray.hpp
gui/include/gui/windows/: ctrl_window.hpp  improc_window.hpp  plot_window.hpp  pump_window.hpp  sysid_setup_window.hpp  sysid_window.hpp  window.hpp
gui/src/gui/: gui.cpp
gui/src/gui/windows/: ctrl_window.cpp  improc_window.cpp  plot_window.cpp  pump_window.cpp  sysid_setup_window.cpp  sysid_window.cpp  window.cpp
imcap/: CMakeLists.txt
imcap/include/imcap/: imcap.hpp
imcap/src/imcap/: imcap.cpp
improc/: CMakeLists.txt
improc/include/improc/: improc.config.hpp  improc.hpp
improc/src/improc/: improc.cpp  improc_helpers.cpp
include/cam/: cam.hpp
include/ctrl/: ctrl.hpp  supervisor.hpp
include/ctrl/state/: state.hpp  state0.hpp  state1.hpp  state2.hpp  sysidstate.hpp
include/gui/: gui.hpp
include/improc/: imcap.hpp  improc.config.hpp  improc.hpp
include/pump/: pump.hpp
include/util/: util.hpp
pump/: CMakeLists.txt
pump/include/pump/: pump.hpp
pump/src/pump/: pump.cpp
pump_pressure_inputs/: CMakeLists.txt
pump_pressure_inputs/fn_tests_and_fn_logic_files/: conv_txt_to_vec.cpp
pump_pressure_inputs/include/: pump_pressure_inputs.hpp
pump_pressure_inputs/sinewave_txt_file_generation/: sinewave_fn.py  time[s].txt  to_text_file.py
pump_pressure_inputs/sinewave_txt_to_vector_fn/: conv_txt_fn_test.cpp
pump_pressure_inputs/src/: pump_pressure_inputs.cpp
pump_pressure_inputs/test/: class_test.cpp
pump_sinestream/: sinewave_fn.py
pump_sinestream/pump_command/: a.out
pump_sinestream/sinewave_txt_file_generation/: p_vs_t.txt  sinewave_fn.py  to_text_file.py
pump_sinewave/: CMakeLists.txt
pump_sinewave/fn_tests_and_fn_logic_files/: a.out  conv_txt_to_vec.cpp
pump_sinewave/sinewave_txt_file_generation/: p.txt  sinewave_fn.py  to_text_file.py
pump_sinewave/sinewave_txt_to_vector_fn/: a.out  conv_txt_fn_test.cpp  conv_txt_to_vec_fn.cpp  conv_txt_to_vec_fn.hpp
src/: CMakeLists.txt  main.cpp
src/cam/: CMakeLists.txt  cam.cpp
src/ctrl/: CMakeLists.txt  supervisor.cpp
src/ctrl/state/: state.cpp  state0.cpp  state1.cpp  state2.cpp  sysidstate.cpp
src/fltk/: CMakeLists.txt  test_fltk.cpp
src/gui/: CMakeLists.txt  gui.cpp  imgui_helpers.cpp
src/improc/: CMakeLists.txt  imcap.cpp  improc.cpp  improc_helpers.cpp
src/pump/: CMakeLists.txt  pump.cpp
src/util/: CMakeLists.txt  util.cpp
test/: CMakeLists.txt  constexpr_tests.cpp
util/: CMakeLists.txt
util/include/util/: util.hpp
util/src/util/: util.cpp
